SERVER-54830 Initialize serviceContext to nullptr in TenantClonerTestFixture